--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Site Title</title>
+    <link rel="stylesheet" href="/style/index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>My Name</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Projects</a>
+      </nav>
+    </header>
+    <!-- Main Section -->
+    <section>
+      <div>
+        <img src="" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
