Completed HTML main section, gallery section, and footer.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,64 @@
     <header>
       <h1>My Name</h1>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Projects</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="projects.html">Projects</a>
       </nav>
     </header>
     <!-- Main Section -->
-    <section>
+    <section class="main">
+      <div></div>
       <div>
-        <img src="" alt="" />
+        <h2>My Name</h2>
+        <button href="projects.html">My Projects</button>
+        <p>
+          Here are some words about me and my journey in coding so far. These
+          words are authentic and inspiring. These words tell my story.
+        </p>
       </div>
     </section>
+    <!-- Gallery Section -->
+    <section class="gallery">
+      <div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>title of a</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>project</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>might go</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>right here</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>cool thing</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>fun thing</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>spicy thing</p>
+        </div>
+        <div>
+          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+          <p>special thing</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <h2>Like what you see?</h2>
+      <button>Contact Me</button>
+    </footer>
   </body>
 </html>
