Completed most of the header styling. Started main section styling.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Noto Sans JP Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Site Title</title>
     <link rel="stylesheet" href="/style/index.css" />
   </head>
@@ -10,7 +17,7 @@
     <header>
       <h1>My Name</h1>
       <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html" class="home-button">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
@@ -18,7 +25,9 @@
     </header>
     <!-- Main Section -->
     <section class="main">
-      <div></div>
+      <div>
+        <img src="https://unsplash.it/200/200" alt="" class="" />
+      </div>
       <div>
         <h2>My Name</h2>
         <button href="projects.html">My Projects</button>
