Applied flexbox to main section and gallery section

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
     <!-- Main Section -->
     <section class="main">
       <div>
-        <img src="https://unsplash.it/200/200" alt="" class="" />
+        <img src="https://unsplash.it/200/200" alt="" />
       </div>
-      <div>
-        <h2>My Name</h2>
-        <button href="projects.html">My Projects</button>
-        <p>
-          Here are some words about me and my journey in coding so far. These
-          words are authentic and inspiring. These words tell my story.
-        </p>
+      <div class="right-side">
+        <div>
+          <h2>My Name</h2>
+          <button href="projects.html">My Projects</button>
+          <p>
+            Here are some words about me and my journey in coding so far. These
+            words are authentic and inspiring. These words tell my story.
+          </p>
+        </div>
       </div>
     </section>
     <!-- Gallery Section -->
@@ -76,7 +78,7 @@
     </section>
     <footer>
       <h2>Like what you see?</h2>
-      <button>Contact Me</button>
+      <button href="contact.html">Contact Me</button>
     </footer>
   </body>
 </html>
