Fixed gallery and main section flexboxs. Added links to the HTML buttons.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="right-side">
         <div>
           <h2>My Name</h2>
-          <button href="projects.html">My Projects</button>
+          <a href="projects.html"><button>My Projects</button></a>
           <p>
             Here are some words about me and my journey in coding so far. These
             words are authentic and inspiring. These words tell my story.
@@ -42,41 +42,33 @@
     <!-- Gallery Section -->
     <section class="gallery">
       <div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>title of a</p>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>project</p>
-        </div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>might go</p>
-        </div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>right here</p>
-        </div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>cool thing</p>
-        </div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>fun thing</p>
-        </div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>spicy thing</p>
-        </div>
-        <div>
-          <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
-          <p>special thing</p>
-        </div>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>title of a</p>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>project</p>
+      </div>
+      <div>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>might go</p>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>right here</p>
+      </div>
+      <div>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>cool thing</p>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>fun thing</p>
+      </div>
+      <div>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>spicy thing</p>
+        <img src="https://unsplash.it/200/200" alt="" class="gallery-image" />
+        <p>special thing</p>
       </div>
     </section>
     <footer>
       <h2>Like what you see?</h2>
-      <button href="contact.html">Contact Me</button>
+      <a href="contact.html"><button>Contact Me</button></a>
     </footer>
   </body>
 </html>
