finished all requirments for the webpage. All links now work, and a twitter button has been added to the footer.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <footer>
       <h2>Like what you see?</h2>
       <a href="contact.html"><button>Contact Me</button></a>
+      <a href="https://twitter.com/Doctorwayway" class="twitter">Twitter</a>
     </footer>
   </body>
 </html>
