Added media queries for mobile accessability.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="header-content">
-        <h1>My Name</h1>
+        <h1>Waylon</h1>
         <nav>
           <a href="index.html" class="active-page">Home</a>
           <a href="about.html">About</a>
