Added portfolio-home-images along with an introduction of myself.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="header-content">
-        <h1>Waylon</h1>
+        <h1>Waylon Turbes</h1>
         <nav>
           <a href="index.html" class="active-page">Home</a>
           <a href="about.html">About</a>
@@ -29,15 +29,15 @@
     <section class="banner">
       <div class="section-container banner-content">
         <div class="banner-left">
-          <img src="https://unsplash.it/200/200" alt="" />
+          <img
+            src="/portfolio-home-images/tall-mountains-unsplash.jpg"
+            alt="Tall mountains on a sunny day."
+          />
         </div>
         <div class="banner-right">
-          <h2>My Name</h2>
+          <h2>Hey there! I'm Waylon</h2>
           <a href="projects.html" class="button">My Projects</a>
-          <p>
-            Here are some words about me and my journey in coding so far. These
-            words are authentic and inspiring. These words tell my story.
-          </p>
+          <p>I am an aspiring web developer and student of Lambda School.</p>
         </div>
       </div>
     </section>
